# ChangeLog for net-wireless/aircrack-ng
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.13 2006/11/02 07:14:35 alonbl Exp $

  02 Nov 2006; Alon Bar-Lev <alonbl@gentoo.org> -aircrack-ng-0.5-r1.ebuild,
  -aircrack-ng-0.6.ebuild, -aircrack-ng-0.6.1.ebuild:
  Cleanup old versions

  01 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  aircrack-ng-0.6.2.ebuild:
  Stable on x86 wrt bug #148913.

  30 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org>
  +files/process-group-leader.c, aircrack-ng-0.5-r1.ebuild,
  aircrack-ng-0.6.ebuild, aircrack-ng-0.6.1.ebuild,
  aircrack-ng-0.6.2.ebuild:
  Replace interactive shell with simple C program, since interactive shell is
  not always interactive (bug#148913)

  23 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> aircrack-ng-0.5-r1.ebuild,
  aircrack-ng-0.6.ebuild, aircrack-ng-0.6.1.ebuild,
  aircrack-ng-0.6.2.ebuild:
  Modify test to be protected by interactive shell, so signal will not be
  catched by sandbox, closes bug#138362

*aircrack-ng-0.6.2 (01 Oct 2006)

  01 Oct 2006; Stefan Schweizer <genstef@gentoo.org>
  +aircrack-ng-0.6.2.ebuild:
  version bump thanks to ChazeFroy <chazefroy@gmail.com> in bug 149783

*aircrack-ng-0.6.1 (23 Sep 2006)

  23 Sep 2006; Stefan Schweizer <genstef@gentoo.org>
  +aircrack-ng-0.6.1.ebuild:
  version bump thanks to David Li <matrixhax0r@gmail.com> in bug 148003

  06 Jul 2006; Joshua Jackson <tsunam@gentoo.org> aircrack-ng-0.5-r1.ebuild:
  Stable x86; bug #138749

*aircrack-ng-0.6 (01 Jul 2006)

  01 Jul 2006; Marcelo Goes <vanquirius@gentoo.org> -aircrack-ng-0.4.ebuild,
  +aircrack-ng-0.6.ebuild:
  0.6 version bump for bug 137838. Thanks to ChazeFroy <chazefroy at gmail dot
  com>.

*aircrack-ng-0.5-r1 (25 May 2006)

  25 May 2006; Marcelo Goes <vanquirius@gentoo.org>
  +aircrack-ng-0.5-r1.ebuild:
  0.5-r1 version bump for bug 133373. Thanks to cygeus <cygeus at gmail dot com>.
