@@ -3,14 +3,19 @@ MD5 0d47d23b749e8355c8def83319b2e784 files/process-group-leader.c 369
 RMD160 cc0d607e59f9e9746c0bf18aca36fcba8abd0ea1 files/process-group-leader.c 369
 SHA256 5b395d9fdc9ccb34a1a28a5084c6692a0c92bf15d126a84fc00fa9160f0eb4cd files/process-group-leader.c 369
 DIST aircrack-ng-0.6.2.tar.gz 150501 RMD160 b22371dba74e6f3cc622769069131e8f2a1ca743 SHA1 5fa5088f3f67cffe58cd6a426b17bb2fe27c62c4 SHA256 94d505cd469b2b66481dc6ab1f9fa3c9e5967baf012ff28a471d9dfcc44ce892
+DIST aircrack-ng-0.7.tar.gz 172998 RMD160 a1828d93ab6433319176f7884ab4f607053018da SHA1 fe8de7dab291ff5778d108d98621a37820392e03 SHA256 90cbd5030938ce1622a8e399c95088bf464bceb95adc290640d4610eb8522aeb
 EBUILD aircrack-ng-0.6.2.ebuild 1158 RMD160 2d081d0885ecfc93726c562be10fad85ea4048fa SHA1 cf85ab210b2fbd882d533649112b276c43b94858 SHA256 1b9f8b7217fcde698844345e8ad1c5ca6c3988b7e1618f694a1a336d27b962b4
 MD5 feda7f571268cd66c38a15da8117b59a aircrack-ng-0.6.2.ebuild 1158
 RMD160 2d081d0885ecfc93726c562be10fad85ea4048fa aircrack-ng-0.6.2.ebuild 1158
 SHA256 1b9f8b7217fcde698844345e8ad1c5ca6c3988b7e1618f694a1a336d27b962b4 aircrack-ng-0.6.2.ebuild 1158
-MISC ChangeLog 2472 RMD160 e421432b642ebe2a357b0a0c0ade218205d417c5 SHA1 ac383f77188782baf6571caf984250998494cdb9 SHA256 1cfab1331c9913ce8ce26bbe102c7056106f867f5b86399a7d5719481c17c927
-MD5 0b6e7625085da239560cae2780ec6fbf ChangeLog 2472
-RMD160 e421432b642ebe2a357b0a0c0ade218205d417c5 ChangeLog 2472
-SHA256 1cfab1331c9913ce8ce26bbe102c7056106f867f5b86399a7d5719481c17c927 ChangeLog 2472
+EBUILD aircrack-ng-0.7.ebuild 1155 RMD160 83080ff963cd6ec31bc00bbbb72165d2e5a62acd SHA1 3a18f2c717b103975012389211cb3bd236fd79a0 SHA256 38c08eff3e06fb467f976e00506523478230a13307bf63e1e6668d9a7004ed95
+MD5 2e6e96ada8de6bd888f98dcdd380a7bf aircrack-ng-0.7.ebuild 1155
+RMD160 83080ff963cd6ec31bc00bbbb72165d2e5a62acd aircrack-ng-0.7.ebuild 1155
+SHA256 38c08eff3e06fb467f976e00506523478230a13307bf63e1e6668d9a7004ed95 aircrack-ng-0.7.ebuild 1155
+MISC ChangeLog 2630 RMD160 408d45cd905bb228b69b4ab0d8e5708fb36c8784 SHA1 c8344e288a2747099056097a738b42b497e471ea SHA256 4449f2fe3e07791838e58f46d6e4888c073a54ce1884aae9c39781932ef3a274
+MD5 746541fdd0429d23c627cffe5573c052 ChangeLog 2630
+RMD160 408d45cd905bb228b69b4ab0d8e5708fb36c8784 ChangeLog 2630
+SHA256 4449f2fe3e07791838e58f46d6e4888c073a54ce1884aae9c39781932ef3a274 ChangeLog 2630
 MISC metadata.xml 545 RMD160 74b28f94434b9af081b71806679b128b42cb8068 SHA1 b9b41decbf07297e72c3f682be1c13415df1f402 SHA256 af8903a9f2e95968febae6760b251c2145e3a26569f71ff64266ae2b4fcbbb2a
 MD5 fa1e307730dae389bd54c27130c69ec5 metadata.xml 545
 RMD160 74b28f94434b9af081b71806679b128b42cb8068 metadata.xml 545
@@ -18,3 +23,6 @@ SHA256 af8903a9f2e95968febae6760b251c2145e3a26569f71ff64266ae2b4fcbbb2a metadata
 MD5 405fba04a8034046545bd0bf39bfed8e files/digest-aircrack-ng-0.6.2 253
 RMD160 4b4e1043180fffd2b526ffd5cec838a468a60b78 files/digest-aircrack-ng-0.6.2 253
 SHA256 b81cab3a6592d55ddef24fa0cc5f3d691fe95859b63632b7640a31f90697eb7d files/digest-aircrack-ng-0.6.2 253
+MD5 8d3179b71b0c57b3cfb122ce978fbc6c files/digest-aircrack-ng-0.7 247
+RMD160 469e602cbf5f66005fd7d159bbedc5781a820d69 files/digest-aircrack-ng-0.7 247
+SHA256 c8e3bdc87423c0f14a7a2701747ec72e78ca847f664c192f4a2310b8aa71412c files/digest-aircrack-ng-0.7 247
