@@ -1,0 +1,3 @@
+MD5 34c0447951d438d76fa32d08eab5da01 aircrack-ng-0.7.tar.gz 172998
+RMD160 a1828d93ab6433319176f7884ab4f607053018da aircrack-ng-0.7.tar.gz 172998
+SHA256 90cbd5030938ce1622a8e399c95088bf464bceb95adc290640d4610eb8522aeb aircrack-ng-0.7.tar.gz 172998
