@@ -1,6 +1,11 @@
 # ChangeLog for net-wireless/aircrack-ng
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.13 2006/11/02 07:14:35 alonbl Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.14 2007/01/22 11:03:41 alonbl Exp $
+
+*aircrack-ng-0.7 (22 Jan 2007)
+
+  22 Jan 2007; Alon Bar-Lev <alonbl@gentoo.org> +aircrack-ng-0.7.ebuild:
+  Version bump, closes bug#163175, thanks to Maxxer
 
   02 Nov 2006; Alon Bar-Lev <alonbl@gentoo.org> -aircrack-ng-0.5-r1.ebuild,
   -aircrack-ng-0.6.ebuild, -aircrack-ng-0.6.1.ebuild:
